--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 Jackson Dawson's CSCE 390 Site!
-https://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2579.png
+
+<img src="(https://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2579.png)">
