--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-Jackson Dawson's CSCE 390 Site!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Jackson Dawson</title>
+    </head>
+    <body>
+        <h1>Jackson Dawson's CSCE 190 Site</h1>
 
-<img src="(https://a.espncdn.com/combiner/i?img=/i/teamlogos/ncaa/500/2579.png)">
+        <section class="assignment">
+            <a href="files/td new.pdf"><img src="images/problem-statement.png"></a>
+            <a href="files/td new.pdf"><h2>Problem Statement: Exercise Motivation</h2></a>
+            <p>
+                Many people today experience a lack of motivation towards
+                exercise so to keep up the motivation we created an app that encourages
+                physical activity bringing a better quality of life.
+            </p>
+            >Problem Statement pdf</a> 
+        </section>
+    </body>
+</html>
