--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1>Jackson Dawson's CSCE 190 Site</h1>
 
         <section class="assignment">
-            <a href="files/td new.pdf"><img src="images/problemstatment.png"></a>
+            <a href="files/td new.pdf"><img src="images/problemstatement-.png"></a>
             <a href="files/td new.pdf"><h2>Problem Statement: Exercise Motivation</h2></a>
             <p>
                 Many people today experience a lack of motivation towards
