--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Jackson Dawson's CSCE 190 Site</h1>
 
+        <!-- Problem Statement Assignment-->
         <section class="assignment">
             <a href="files/td new.pdf"><img src="images/problemstatement-.png"></a>
             <a href="files/td new.pdf"><h2>Problem Statement: Exercise Motivation</h2></a>
@@ -15,6 +16,16 @@
                 physical activity bringing a better quality of life.
             </p>
             <a href="files/td new.pdf">Problem Statement pdf</a> 
+        </section>
+
+        <!--Affinity Diagram Assingment-->
+        <section class="assignment">
+            <a href="files/Affinity Diagram-Tinder Development Team.pdf"><img src="images/AffinityDiagramReal.png"></a>
+            <a href="files/Affinity Diagram-Tinder Development Team.pdf"><h2>Affinity Diagram: Exercise Motivation</h2></a>
+            <p>
+                Our group worked together to think of all the main ideas and concepts surrounding exercize motivation.
+            </p>
+            <a href="files/Affinity Diagram-Tinder Development Team.pdf">Affinity Diagram PDF</a> 
         </section>
     </body>
 </html>
