--- a/index.html
+++ b/index.html
@@ -6,63 +6,63 @@
     </head>
     <body>
         <h1>Jackson Dawson's CSCE 190 Site</h1>
-
-        <!-- Problem Statement Assignment-->
-        <section class="assignment">
+    
+        <div class="assignments">
+            <!-- Problem Statement Assignment-->
+            <section class="assignment">
+            <a href="files/td new.pdf"><h2>Problem Statement: Exercise Motivation</h2></a>
             <a href="files/td new.pdf"><img src="images/problemstatement-.png"></a>
-            <section class="as-details">
-                <a href="files/td new.pdf"><h2>Problem Statement: Exercise Motivation</h2></a>
                     <p>
                         Many people today experience a lack of motivation towards
                         exercise so to keep up the motivation we created an app that encourages
                         physical activity bringing a better quality of life.
                     </p>
             </section>
-        </section>
 
-        <!--Affinity Diagram Assingment-->
-        <section class="assignment">
-            <a href="files/Affinity Diagram-Tinder Development Team.pdf"><img src="images/AffinityDiagramReal.png"></a>
-            <section class="ass-details">
+            <!--Affinity Diagram Assingment-->
+            <section class="assignment">
                 <a href="files/Affinity Diagram-Tinder Development Team.pdf"><h2>Affinity Diagram: Exercise Motivation</h2></a>
-                    <p>
-                        Our group worked together to think of all the main ideas and concepts surrounding exercize motivation.
-                     </p>
-        </section>
-    </section>
+                <a href="files/Affinity Diagram-Tinder Development Team.pdf"><img src="images/AffinityDiagramReal.png"></a>
+                        <p>
+                            Our group worked together to think of all the main ideas and concepts surrounding exercize motivation.
+                        </p>
+            </section>
 
-        <!--Personas Assingment-->
-        <section class="assignment">
-            <a href="files/persona.docx"><img src="images/Screenshot 2023-04-02 091538.png"></a>
-            <section class="ass-details">
-            <a href="files/persona.docx"><h2>Personas: 4 Personas for Workout App</h2></a>
-                    <p>
-                        Our group worked together to create different personas regarding our app and how it might help in different potention scenarios.
-                    </p>
-        </section>
-    </section>
+            <!--Personas Assingment-->
+            <section class="assignment">
+                <a href="files/persona.docx"><h2>Personas: 4 Personas for Workout App</h2></a>
+                <a href="files/persona.docx"><img src="images/Screenshot 2023-04-02 091538.png"></a>
+                        <p>
+                            Our group worked together to create different personas regarding our app and how it might help in different potention scenarios.
+                        </p>
+            </section>
 
-    <!--Storyboard Assingment-->
-    <section class="assignment">
-        <a href="files/Story board with walker, randale, aiden, jackson.pdf"><img src="images/Screenshot 2023-04-02 101059.png"></a>
-        <section class="ass-details">
-        <a href="files/Story board with walker, randale, aiden, jackson.pdf"><h2>Storyboards: Workout App</h2></a>
-                <p>
-                    Our group worked together to create different storyboards regarding our app and how it might help in different potention scenarios.
-                </p>
-        </section>
-    </section>
+            <!--Storyboard Assingment-->
+            <section class="assignment">
+                <a href="files/Story board with walker, randale, aiden, jackson.pdf"><h2>Storyboards: Workout App</h2></a>
+                <a href="files/Story board with walker, randale, aiden, jackson.pdf"><img src="images/Screenshot 2023-04-02 101059.png"></a>
+                        <p>
+                            Our group worked together to create different storyboards regarding our app and how it might help in different potention scenarios.
+                        </p>
+            </section>
 
-    <!--Sketches Assingment-->
-    <section class="assignment">
-        <a href="files/Sketch combined CSCE190.pdf"><img src="images/Screenshot 2023-04-02 102344.png"></a>
-        <section class="ass-details">
-        <a href="files/Sketch combined CSCE190.pdf"><h2>Sketches: Workout App</h2></a>
-                <p>
-                    Sketches for a potential UI for our workout app.
-                </p>
-        </section>
-    </section>
+            <!--Sketches Assingment-->
+            <section class="assignment">
+                <a href="files/Sketch combined CSCE190.pdf"><h2>Sketches: Workout App</h2></a>
+                <a href="files/Sketch combined CSCE190.pdf"><img src="images/Screenshot 2023-04-02 102344.png"></a>
+                        <p>
+                            Sketches for a potential UI for our workout app.
+                        </p>
+            </section>
 
+            <!--Video Assingment-->
+            <section class="assignment">
+                <a href="https://youtu.be/N2zgY_F4ivU"><h2>Paper Prototyping: Workout App</h2></a>
+                <a href="https://youtu.be/N2zgY_F4ivU"><img src="images/PaperProtoReal.png"></a>
+                        <p>
+                            Video for paper prototyping for potential workout app. 
+                        </p>
+            </section>
+        </div>
     </body>
 </html>
