--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                             Video for paper prototyping for potential workout app. 
                         </p>
             </section>
+
+            <!--HIFI Prototype-->
+            <section class="assignment">
+                <a href="https://pr.to/GWBTHW/"><h2>Hi-Fi Prototype: Workout App</h2></a>
+                <a href="https://pr.to/GWBTHW/"><img src="images/HIFIprotopaint.png"></a>
+                        <p>
+                            High fidelity prototype for potential workout app. 
+                        </p>
+            </section>
         </div>
     </body>
 </html>
