adding some changes regarding Home Page and Assignment Links

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,1 +1,15 @@
-<a href="assignments/assignment01/index.html">Assignment 1</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 242</title>
+    </head>
+    <body>
+        <h1>CSCE 242</h1>
+        <h1>Jackson Dawson</h1>
+        <p>CSCE 242 is a Web Applications Course in which students will use HTML and CSS to design a frontend of a website. Then, using JavaScript, students will add functionality to their websites. Finally, we will utilize node and server side JS to interact with a server side.</p>
+        <h2>Assignments</h2>
+        <ul>
+            <li><a href=https://jwdaw.github.io/csce242/assignments/assignment01>Assignment 1</a></li>
+        </ul>
+    </body>
+</html>
