Added Assignment One and Proper Links

--- a/csce242/assignments/assignment01/index.html
+++ b/csce242/assignments/assignment01/index.html
@@ -1,1 +1,56 @@
-Assignment 1
+<!--Jackson Dawosn-->
+<!--CSCE 242-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Internship Tutorial</title>
+    </head>
+    <body>
+        <h1>How To Get a CompSci Internship</h1>
+        <p1>
+            Yay! You're likely a first or second year Computer Science
+            Student and you're looking to get an internship. This page will
+            help you get started on the right path to getting an internship.
+            Dont worry, it's not as hard as you think. Just follow these steps.
+            <br>
+        </p1>
+        <p2>
+            <br> 
+            Step One: You're going to need to start working
+            on your resume. Make sure to include any relevant experience you have. Step Two:
+            Start applying to internships. You can find internships on websites like Linkedin
+            or Indeed. Step Three: use an incredible service called LeetCode, where you get to 
+            solve intersting coding problems. Step Four: is to start preparing for interviews. You Got This! 
+        </p2>
+        <img src="images/63c12849a1c7e9df64c819fc_programming-languages-shutterstock-1680857539.png" alt="Programming Languages">
+        <img src="images/istockphoto-1330057346-612x612-1.jpg" alt="Computer Science">
+        <ul>
+            <li>Computer Science</li>
+            <li>Internship</li>
+            <li>LeetCode</li>
+            <li>Resume</li>
+        </ul>
+        <table>
+            <tr>
+                <th>Company</th>`
+                <th>Position</th>
+                <th>Link</th>
+            </tr>
+            <tr>
+                <td>Google</td>
+                <td>Software Engineer Intern</td>
+                <td><a href="https://www.google.com/about/careers/applications/students/">Google Careers</a></td>
+            </tr>
+            <tr>
+                <td>Meta</td>
+                <td>Software Engineer Intern</td>
+                <td><a href="https://www.metacareers.com/students-and-grads">Meta Careers</a></td>
+            </tr>
+            <tr>
+                <td>Amazon</td>
+                <td>Software Engineer Intern</td>
+                <td><a href = "https://www.amazon.jobs/content/en/career-programs/university/internships-for-students">Amazon Jobs</a></td>
+            </tr>
+        </table>
+    </body>
+</html>
