Added Assignemnt 2 Link

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -10,6 +10,7 @@
         <h2>Assignments</h2>
         <ul>
             <li><a href=https://jwdaw.github.io/csce242/assignments/assignment01>Assignment 1</a></li>
+            <li><a href=https://jwdaw.github.io/csce242/assignments/assignment02>Assignment 2</a></li>
         </ul>
     </body>
 </html>
