updated main CSCE 242 page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -2,15 +2,46 @@
 <html>
     <head>
         <title>CSCE 242</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>CSCE 242</h1>
-        <h1>Jackson Dawson</h1>
-        <p>CSCE 242 is a Web Applications Course in which students will use HTML and CSS to design a frontend of a website. Then, using JavaScript, students will add functionality to their websites. Finally, we will utilize node and server side JS to interact with a server side.</p>
-        <h2>Assignments</h2>
-        <ul>
-            <li><a href=https://jwdaw.github.io/csce242/assignments/assignment01>Assignment 1</a></li>
-            <li><a href=https://jwdaw.github.io/csce242/assignments/assignment02>Assignment 2</a></li>
-        </ul>
+        <div id="main_info">
+            <header>
+                <h1>CSCE 242</h1>
+                <nav id="main-nav">
+                    <ul>
+                        <li><a href="https://jwdaw.github.io/csce242">Home</a></li>
+                        <li><a href="jwdaw.github.io/csce242/assignments.html">About</a></li>
+                        <li><a href=#>Assignments</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <h2>
+                    This page contains the resources, assignments, and info 
+                    regarding my participation in the CSCE 242 course, Spring 2025.
+                </h2>
+                <p>
+                    CSCE 242 is a Web Applications Course in which students 
+                    will use HTML and CSS to design a frontend of a website.
+                    Then, using JavaScript, students will add functionality
+                    to their websites. Finally, we will utilize node and 
+                    server side JS to interact with a server side.
+                </p>
+            </main>
+            <footer>
+                <p><strong>&copy; Jackson Dawson 2025</strong></p>
+            </footer>
+        </div>
+        <div id="assignments">
+                <h2>Assignments</h2>
+                <ul>
+                    <li><a href="https://jwdaw.github.io/csce242/assignments/assignment01/">Assignment 1</a></li>
+                    <li><a href="https://jwdaw.github.io/csce242/assignments/assignment02">Assignment 2</a></li>
+                    <li><a href="#">Assignment 3</a></li>
+                    <li><a href="#">Assignment 4</a></li>
+                    <li><a href="#">Assignment 5</a></li>
+                </ul>
+        </div>
     </body>
 </html>
