--- a/csce242/assignments/assignment02/index.html
+++ b/csce242/assignments/assignment02/index.html
@@ -1,1 +1,67 @@
-Assignment 02
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <title>Schedule Helper</title>
+    </head>
+    <body>
+        <div id="content">
+            <header class="main-header">
+                <h1>Schedule Helper</h1>
+                <nav id="main-nav">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Pictures</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <h2>Managing Your Schedule</h2>
+                <p>
+                    Learning to manage your schedule effectively is a crucial skill 
+                    for success. By prioritizing tasks and setting clear goals, you 
+                    can make the most of your time. Utilizing tools like calendars 
+                    and to-do lists can help keep you organized. Remember to also 
+                    allocate time for rest and relaxation to maintain a healthy balance.
+                </p>
+                <div class="img-holder">
+                    <img id = 1 src="images/schedule-pic.jpg" alt="Schedule">
+                    <img id = 2 src="images/schedule-photo.jpg" alt="Schedule">
+                    <img id = 3 src="images/schedule-img.jpg" alt="Schedule">
+                </div>
+              <h3>Here are some tips for managing your schedule:</h3>
+                <table id="tip-list">
+                    <tr>
+                        <th>Tip</th>
+                        <th>Description</th>
+                        <th>Date</th>
+                    </tr>
+                    <tr>
+                        <td>Set Clear Goals</td>
+                        <td>Define what you want to accomplish and break it down into smaller tasks.</td>
+                        <td>10/10/2025</td>
+                    </tr>
+                    <tr>
+                        <td>Use a Calendar</td>
+                        <td>Keep track of important dates and deadlines to stay organized.</td>
+                        <td>10/11/2025</td>
+                    </tr>
+                    <tr>
+                        <td>Create To-Do Lists</td>
+                        <td>Write down tasks and prioritize them to ensure you stay on track.</td>
+                        <td>10/12/2025</td>
+                    </tr>
+                    <tr>
+                        <td>Allocate Time for Rest</td>
+                        <td>Make sure to take breaks and relax to avoid burnout.</td>
+                        <td>10/13/2025</td>
+                </table>
+            </main>
+            <footer class="main-footer">
+                <p><strong>&copy; Jackson Dawson</strong></p>
+            </footer>
+        </div>
+    </body>
+</html>
