--- a/csce242/index.html
+++ b/csce242/index.html
@@ -11,7 +11,7 @@
                 <nav id="main-nav">
                     <ul>
                         <li><a href="https://jwdaw.github.io/csce242">Home</a></li>
-                        <li><a href="jwdaw.github.io/csce242/assignments.html">About</a></li>
+                        <li><a href=#>About</a></li>
                         <li><a href=#>Assignments</a></li>
                     </ul>
                 </nav>
