--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CSCE 242</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div id="main_info">
-            <header>
-                <h1>CSCE 242</h1>
-                <nav id="main-nav">
-                    <ul>
-                        <li><a href="https://jwdaw.github.io/csce242">Home</a></li>
-                        <li><a href=#>About</a></li>
-                        <li><a href=#>Assignments</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <main>
-                <h2>
-                    This page contains the resources, assignments, and info 
-                    regarding my participation in the CSCE 242 course, Spring 2025.
-                </h2>
-                <p>
-                    CSCE 242 is a Web Applications Course in which students 
-                    will use HTML and CSS to design a frontend of a website.
-                    Then, using JavaScript, students will add functionality
-                    to their websites. Finally, we will utilize node and 
-                    server side JS to interact with a server side.
-                </p>
-            </main>
-            <footer>
-                <p><strong>&copy; Jackson Dawson 2025</strong></p>
-            </footer>
-        </div>
-        <div id="assignments">
-                <h2>Assignments</h2>
-                <ul>
-                    <li><a href="https://jwdaw.github.io/csce242/assignments/assignment01/">Assignment 1</a></li>
-                    <li><a href="https://jwdaw.github.io/csce242/assignments/assignment02">Assignment 2</a></li>
-                    <li><a href="#">Assignment 3</a></li>
-                    <li><a href="#">Assignment 4</a></li>
-                    <li><a href="#">Assignment 5</a></li>
-                </ul>
-        </div>
-    </body>
+  <head>
+    <title>CSCE 242</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header id="main-header">
+      <p id="name">Jackson Dawson</p>
+      <h1>CSCE 242: Client Server Computing</h1>
+    </header>
+    <main id="main-content">
+      <h2>Assignments</h2>
+      <div class="flex-container">
+        <section class="assignments">
+          <h3>Assignment 1</h3>
+          <img src="images/assignment01.png" alt="Assignment 1" />
+          <p>
+            First Assignment in which basic html structure and syntax was
+            declared. We implmented concepts such as headers, paragraphs,
+            unordered lists, images, and more.
+          </p>
+        </section>
+        <section class="assignments">
+          <h3>Assignment 2</h3>
+          <img src="images/assignment02.png" alt="Assignment 2" />
+          <p>
+            Second Assignment in whcih we learend to use basci CSS to style a
+            webpage. This included concepts like CSS syntax, background colors,
+            text colors, fonts, and more.
+          </p>
+        </section>
+        <section class="assignments">
+          <h3>Assignment 3</h3>
+        </section>
+      </div>
+    </main>
+    <footer id="main-footer">
+      <p><strong>&copy; Jackson Dawson 2025</strong></p>
+    </footer>
+  </body>
 </html>
