--- a/csce242/index.html
+++ b/csce242/index.html
@@ -13,8 +13,14 @@
       <h2>Assignments</h2>
       <div class="flex-container">
         <section class="assignments">
-          <h3>Assignment 1</h3>
-          <img src="images/assignment01.png" alt="Assignment 1" />
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment01"
+              >Assignment 1 - Basic HTML</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment01"
+            ><img src="images/assignment01.png" alt="Assignment 1"
+          /></a>
           <p>
             First Assignment in which basic html structure and syntax was
             declared. We implmented concepts such as headers, paragraphs,
@@ -22,8 +28,14 @@
           </p>
         </section>
         <section class="assignments">
-          <h3>Assignment 2</h3>
-          <img src="images/assignment02.png" alt="Assignment 2" />
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment02"
+              >Assignment 2 - Basic CSS</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment02"
+            ><img src="images/assignment02.png" alt="Assignment 1"
+          /></a>
           <p>
             Second Assignment in whcih we learend to use basci CSS to style a
             webpage. This included concepts like CSS syntax, background colors,
