added update to home page for assignment 3

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -34,7 +34,7 @@
             >
           </h3>
           <a href="https://jwdaw.github.io/csce242/assignments/assignment02"
-            ><img src="images/assignment02.png" alt="Assignment 1"
+            ><img src="images/assignment02.png" alt="Assignment 2"
           /></a>
           <p>
             Second Assignment in whcih we learend to use basci CSS to style a
@@ -43,7 +43,19 @@
           </p>
         </section>
         <section class="assignments">
-          <h3>Assignment 3</h3>
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment03"
+              >Assignment 3 - Page Layout</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment03"
+            ><img src="images/assignment03.png" alt="Assignment 3"
+          /></a>
+          <p>
+            Third assignment in which we learned to use CSS flexbox to create
+            both horizontal and vertical layouts. We also learned to use media
+            queries to adjust the layout for different screen sizes.
+          </p>
         </section>
       </div>
     </main>
