Main Page Projects Section added to main webpage

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -10,7 +10,7 @@
       <h1>CSCE 242: Client Server Computing</h1>
     </header>
     <main id="main-content">
-      <h2>Assignments</h2>
+      <h2 id="assignment-header">Assignments</h2>
       <div class="flex-container">
         <section class="assignments">
           <h3>
@@ -55,6 +55,26 @@
             Third assignment in which we learned to use CSS flexbox to create
             both horizontal and vertical layouts. We also learned to use media
             queries to adjust the layout for different screen sizes.
+          </p>
+        </section>
+      </div>
+      <h2 id="assignment-header">Portfolio Project</h2>
+      <div class="flex-container">
+        <section class="assignments">
+          <h3>
+            <a
+              href="https://github.com/jwdaw/jwdaw.github.io/blob/main/projects/part1/projectpart1.pdf"
+              >Part 1 - Topic Selection</a
+            >
+          </h3>
+          <a
+            href="https://github.com/jwdaw/jwdaw.github.io/blob/main/projects/part1/projectpart1.pdf"
+            ><img src="images/ProjectPart1.png" alt="Project Part 1"
+          /></a>
+          <p>
+            Part one of the portfolio project in which I selected a topic to
+            create a website for. I selected the topic of a personal portfolio
+            website to showcase my work throughout school and my career.
           </p>
         </section>
       </div>
