added project part 2

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -77,6 +77,23 @@
             website to showcase my work throughout school and my career.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a
+              href="https://github.com/jwdaw/jwdaw.github.io/blob/main/projects/part1/projectpart1.pdf"
+              >Part 2 - Wireframe</a
+            >
+          </h3>
+          <a href="jwdaw.github.io/projects/part2/index.html"
+            ><img src="images/Wireframe.png" alt="Project Part 2"
+          /></a>
+          <p>
+            Part two of the portfolio project in which I created a wireframe for
+            my soon to be website. The Wirefram is simply a visual proof of
+            concept that allows me to visualize what I want my website to look
+            like in the future.
+          </p>
+        </section>
       </div>
     </main>
     <footer id="main-footer">
