fixed link issue with project part 2

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -79,8 +79,7 @@
         </section>
         <section class="assignments">
           <h3>
-            <a
-              href="https://github.com/jwdaw/jwdaw.github.io/blob/main/projects/part1/projectpart1.pdf"
+            <a href="jwdaw.github.io/projects/part2/index.html"
               >Part 2 - Wireframe</a
             >
           </h3>
