--- a/csce242/index.html
+++ b/csce242/index.html
@@ -79,9 +79,9 @@
         </section>
         <section class="assignments">
           <h3>
-            <a href="/projects/part2/index.html">Part 2 - Wireframe</a>
+            <a href="csce242/projects/part2/index.html">Part 2 - Wireframe</a>
           </h3>
-          <a href="/projects/part2/index.html"
+          <a href="csce242/projects/part2/index.html"
             ><img src="images/Wireframe.png" alt="Project Part 2"
           /></a>
           <p>
