--- a/csce242/index.html
+++ b/csce242/index.html
@@ -57,6 +57,21 @@
             queries to adjust the layout for different screen sizes.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment04"
+              >Assignment 4 - Recreate CSS</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment04"
+            ><img src="images/Assignment04.png" alt="Assignment 4"
+          /></a>
+          <p>
+            Fourth Assignment in which we had to visually recreate a website
+            using html and CSS. This focused heavily on the use of flex
+            containers and media queries.
+          </p>
+        </section>
       </div>
       <h2 id="assignment-header">Portfolio Project</h2>
       <div class="flex-container">
