--- a/csce242/index.html
+++ b/csce242/index.html
@@ -57,6 +57,8 @@
             queries to adjust the layout for different screen sizes.
           </p>
         </section>
+      </div>
+      <div class="flex-container">
         <section class="assignments">
           <h3>
             <a href="https://jwdaw.github.io/csce242/assignments/assignment04"
@@ -70,6 +72,21 @@
             Fourth Assignment in which we had to visually recreate a website
             using html and CSS. This focused heavily on the use of flex
             containers and media queries.
+          </p>
+        </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment05"
+              >Assignment 5 - JavaScript Buttons, Functions, and More
+            </a>
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment05"
+            ><img src="images/Assignment05.png" alt="Assignment 5"
+          /></a>
+          <p>
+            Fifth Assignment in which we created a simple website with some
+            JavaScript functionality to include clicking buttons, changing an
+            image, recoloring a shape, etc.
           </p>
         </section>
       </div>
