--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Jackson Dawson Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <!--body containing website content-->
   <body>
@@ -37,13 +38,13 @@
           <section id="img-section">
             <div id="slideshow">
               <div class="slide fade">
-                <img src="https://placehold.co/300x150" />
+                <img src="https://placehold.co/300x300" />
               </div>
               <div class="slide fade">
-                <img src="https://picsum.photos/300/150" />
+                <img src="https://picsum.photos/300/300" />
               </div>
               <div class="slide fade">
-                <img src="https://fakeimg.pl/300x150" />
+                <img src="https://fakeimg.pl/300x300" />
               </div>
             </div>
             <div id="dots" style="text-align: center">
@@ -64,16 +65,6 @@
             sed platea pharetra aptent gravida rhoncus congue. Lacus venenatis
             vivamus sem amet non ullamcorper pretium viverra. Nullam amet
             pretium taciti metus; egestas morbi nisl velit leo. At nostra a orci
-            commodo ad vivamus nascetur. Maecenas pharetra mattis cubilia
-            integer integer nec neque inceptos. Velit per suscipit magna;
-            cubilia convallis erat. Ligula consequat viverra interdum vivamus
-            penatibus consectetur nisi odio. Amet dapibus euismod nam sociosqu
-            dapibus arcu pulvinar. Eu ullamcorper aliquam interdum maximus
-            dictum. Nec sollicitudin habitant duis eros natoque quam lacus. Amet
-            penatibus aenean dignissim lacinia torquent aliquam; natoque
-            habitasse facilisi. Molestie curabitur elementum pretium convallis
-            nisi, eget penatibus! Orci turpis conubia sociosqu varius nunc
-            laoreet neque.
           </p>
         </div>
       </section>
