--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -4,7 +4,6 @@
   <head>
     <title>Jackson Dawson Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <!--body containing website content-->
   <body>
@@ -54,7 +53,7 @@
             </div>
           </section>
         </div>
-        <div class="flex-item">
+        <div class="flex-item news">
           <h2>News</h2>
           <p>
             Lorem ipsum odor amet, consectetuer adipiscing elit. Cubilia finibus
