added about me page

--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="flex-item news">
           <h2>News</h2>
-          <p>
+          <p id="news">
             Lorem ipsum odor amet, consectetuer adipiscing elit. Cubilia finibus
             lacus elementum proin convallis ultricies senectus habitant. Nec
             sapien curae massa vehicula risus. Cubilia ullamcorper commodo lorem
