added final linking to project part 3

--- a/csce242/projects/part3/contact.html
+++ b/csce242/projects/part3/contact.html
@@ -34,29 +34,20 @@
     </header>
     <!--Main Content of Home Page-->
     <main id="main-content">
+      <h1>Contact Me</h1>
+      <p>
+        Feel free to reach out with any questions over email or phone! I am
+        typically available from 8-8 on Weekdays! Below are also some helpful
+        links in regards to my computing experience. Thank you!
+      </p>
       <div id="flex-box">
-        <section class="flex-section">
-          <img src="images/profile.jpg" id="profile-img" />
-          <div id="jackson-info">
-            <p class="jd-info">Name: Jackson Dawson</p>
-            <p class="jd-info">Major: Computer Infromation Systems</p>
-            <p class="jd-info">Anticipated Graduation: May 2026</p>
-            <p class="jd-info">Hometown: Fort Mill, SC</p>
-          </div>
+        <section class="flex-contact">
+          <h2>Phone Number: (123)456-7890</h2>
+          <h2>Email: JD55@email.sc.edu</h2>
         </section>
-        <section class="flex-section">
-          <div id="hobbies">
-            <p>
-              Hobbies: Lorem ipsum odor amet, consectetuer adipiscing elit.
-              Cubilia finibus lacus elementum proin convallis ultricies senectus
-              habitant. Nec sapien curae massa vehicula risus. Cubilia
-              ullamcorper commodo lorem diam posuere proin maximus pretium
-              vivamus. Molestie at neque nascetur netus justo turpis volutpat
-              justo tincidunt. Nascetur proin sed platea pharetra aptent gravida
-              rhoncus congue.
-            </p>
-          </div>
-          <img src="https://placehold.co/600x200" id="hobby-img" />
+        <section class="flex-contact">
+          <h2>LinkedIn: <a href="https://www.linkedin.com/">LinkedIn</a></h2>
+          <h2>GitHub: <a href="https://www.github.com/">GitHub</a></h2>
         </section>
       </div>
     </main>
