--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -14,10 +14,20 @@
       <nav id="main-nav">
         <ul>
           <li>
-            <a href="#">Home</a>
-            <a href="#">About Me</a>
-            <a href="#">Projects</a>
-            <a href="#">Contact Me</a>
+            <a href="https://jwdaw.github.io/csce242/projects/part3/index.html"
+              >Home</a
+            >
+            <a href="https://jwdaw.github.io/csce242/projects/part3/about.html"
+              >About Me</a
+            >
+            <a
+              href="https://jwdaw.github.io/csce242/projects/part3/projects.html"
+              >Projects</a
+            >
+            <a
+              href="https://jwdaw.github.io/csce242/projects/part3/contact.html"
+              >Contact Me</a
+            >
           </li>
         </ul>
       </nav>
