--- a/csce242/projects/part3/projects.html
+++ b/csce242/projects/part3/projects.html
@@ -14,10 +14,20 @@
       <nav id="main-nav">
         <ul>
           <li>
-            <a href="#">Home</a>
-            <a href="#">About Me</a>
-            <a href="#">Projects</a>
-            <a href="#">Contact Me</a>
+            <a href="https://jwdaw.github.io/csce242/projects/part3/index.html"
+              >Home</a
+            >
+            <a href="https://jwdaw.github.io/csce242/projects/part3/about.html"
+              >About Me</a
+            >
+            <a
+              href="https://jwdaw.github.io/csce242/projects/part3/projects.html"
+              >Projects</a
+            >
+            <a
+              href="https://jwdaw.github.io/csce242/projects/part3/contact.html"
+              >Contact Me</a
+            >
           </li>
         </ul>
       </nav>
@@ -25,34 +35,60 @@
     <!--Main Content of Home Page-->
     <main id="main-content">
       <div id="flex-box">
-        <section class="flex-section">
-          <img src="images/profile.jpg" id="profile-img" />
-          <div id="jackson-info">
-            <p class="jd-info">Name: Jackson Dawson</p>
-            <p class="jd-info">Major: Computer Infromation Systems</p>
-            <p class="jd-info">Anticipated Graduation: May 2026</p>
-            <p class="jd-info">Hometown: Fort Mill, SC</p>
+        <section class="flex-projects">
+          <div id="project-menu">
+            <button id="placeholder">placeholder 1</button>
+            <button id="placeholder1">placeholder 2</button>
+            <button id="placeholder2">placeholder 3</button>
+            <button id="placeholder3">placeholder 4</button>
+            <button id="placeholder4">placeholder 5</button>
+            <button id="placeholder5">placeholder 6</button>
           </div>
         </section>
         <section class="flex-section">
-          <div id="hobbies">
-            <p>
-              Hobbies: Lorem ipsum odor amet, consectetuer adipiscing elit.
-              Cubilia finibus lacus elementum proin convallis ultricies senectus
-              habitant. Nec sapien curae massa vehicula risus. Cubilia
-              ullamcorper commodo lorem diam posuere proin maximus pretium
-              vivamus. Molestie at neque nascetur netus justo turpis volutpat
-              justo tincidunt. Nascetur proin sed platea pharetra aptent gravida
-              rhoncus congue.
-            </p>
+          <div id="project-top">
+            <img src="https://placehold.co/300x200" id="project-img" />
+            <div id="project-desc">
+              <p>
+                <strong>Project Description: </strong>Lorem ipsum odor amet,
+                consectetuer adipiscing elit. Cubilia finibus lacus elementum
+                proin convallis ultricies senectus habitant. Nec sapien curae
+                massa vehicula risus. Cubilia ullamcorper commodo lorem diam
+                posuere proin maximus pretium vivamus. Molestie at neque
+                nascetur netus justo turpis volutpat justo tincidunt. Nascetur
+                proin sed platea pharetra aptent gravida rhoncus congue.
+              </p>
+            </div>
           </div>
-          <img src="https://placehold.co/600x200" id="hobby-img" />
+          <div id="project-bottom">
+            <div id="skills">
+              <p>
+                <strong>Skills Gained: </strong>Lorem ipsum odor amet,
+                consectetuer adipiscing elit. Cubilia finibus lacus elementum
+                proin convallis ultricies senectus habitant. Nec sapien curae
+                massa vehicula risus. Cubilia ullamcorper commodo lorem diam
+                posuere proin maximus pretium vivamus. Molestie at neque
+                nascetur netus justo turpis volutpat justo tincidunt. Nascetur
+                proin sed platea pharetra aptent gravida rhoncus congue.
+              </p>
+            </div>
+            <div id="sources">
+              <p>
+                <strong>Sources/Contributions: </strong>Lorem ipsum odor amet,
+                consectetuer adipiscing elit. Cubilia finibus lacus elementum
+                Nec sapien curae massa vehicula risus. Cubilia ullamcorper
+                commodo lorem diam posuere proin maximus pretium vivamus.
+                Nascetur proin sed platea pharetra aptent gravida rhoncus
+                congue.
+              </p>
+            </div>
+          </div>
         </section>
       </div>
     </main>
     <footer id="main-footer">
       <p>Copyright &copy; 2023 Jackson Dawson</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="projectscript.js"></script>
   </body>
 </html>
