maybe fixed issue

--- a/csce242/projects/part3/about.html
+++ b/csce242/projects/part3/about.html
@@ -3,7 +3,7 @@
   <!--head containing tab title and link to stylesheet-->
   <head>
     <title>Jackson Dawson Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/csce242/projects/part3/styles.css" />
   </head>
   <!--body containing website content-->
   <body>
