--- a/csce242/index.html
+++ b/csce242/index.html
@@ -123,6 +123,21 @@
             like in the future.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/projects/part3/index.html"
+              >Part 3 - HTML and CSS</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/projects/part3/index.html"
+            ><img src="images/part3.png" alt="Project Part 3"
+          /></a>
+          <p>
+            Part three of the portfolio project in which I created all the pages
+            of my website from the wireframe in HTML and edited them with CSS.
+            Included a little bit of JS as well.
+          </p>
+        </section>
       </div>
     </main>
     <footer id="main-footer">
