messing around with different viewing sizes

--- a/csce242/exercises/05jsintro/coding.html
+++ b/csce242/exercises/05jsintro/coding.html
@@ -32,6 +32,34 @@
           <button id="btn-color">Color Below</button>
           <p id="message"></p>
         </section>
+        <section>
+          <h3>Choose A Color</h3>
+          <input type="text" id="color" />
+          <button id="color-button">Select color</button>
+          <p id="color-message"></p>
+        </section>
+        <section id="ball-area">
+          <p>
+            <button id="btn-down">down</button>
+            <button id="btn-up">up</button>
+            <input type="color" id="btn-circle-color" />
+          </p>
+          <div id="circle"></div>
+        </section>
+        <section>
+          <h3>Goal $1000</h3>
+          <p>
+            <label for="txt-donation">Enter Donation:</label>
+          </p>
+          <p>
+            <input type="number" id="txt-donation" />
+            <button id="btn-add-donation">Add</button>
+          </p>
+          <div class="columns">
+            <div id="thermometer"></div>
+            <p id="donation-message"></p>
+          </div>
+        </section>
       </main>
       <footer>
         <p><strong>&copy; myname</strong></p>
