--- a/csce242/projects/part3/index.html
+++ b/csce242/projects/part3/index.html
@@ -3,7 +3,7 @@
   <!--head containing tab title and link to stylesheet-->
   <head>
     <title>Jackson Dawson Portfolio</title>
-    <link rel="stylesheet" href="/csce242/projects/part3/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <!--body containing website content-->
   <body>
@@ -12,7 +12,12 @@
       <h1>Jackson Dawson Portfolio</h1>
       <!--Main Navigation-->
       <nav id="main-nav">
-        <ul>
+        <div id="toggle-nav">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <ul id="nav-items" class="columns hide-small">
           <li>
             <a href="https://jwdaw.github.io/csce242/projects/part3/index.html"
               >Home</a
