added blog project

--- a/csce242/projects/part4/blog.html
+++ b/csce242/projects/part4/blog.html
@@ -42,44 +42,34 @@
     </header>
     <!--Main Content of Home Page-->
     <main id="main-content">
-      <div id="flex-box">
-        <section class="flex-section">
-          <img src="images/profile.jpg" id="profile-img" />
-          <p class="jd-info">Name: Jackson Dawson</p>
-          <p class="jd-info">Major: Computer Infromation Systems</p>
-          <p class="jd-info">Anticipated Graduation: May 2026</p>
-          <p class="jd-info">Hometown: Fort Mill, SC</p>
-          <p class="jd-info">Favorite Color: Blue</p>
-          <p class="jd-info">
-            Least Favorite Sorting Algorithm: Selection Sort (O(n^2)... ew)
+      <h1>Blog</h1>
+      <div id="flex-blog">
+        <section class="flex-post">
+          <h2>CU Hackathon 2025 Coming Up!!! - 02/16/2025</h2>
+          <p class="blog-text">
+            <img src="images/CUHackit.png" />
+            I'm excited to participate in this years Clemson Universities 2025
+            Hackathon! I'm excited to team up with some friends who attent
+            Clemson to gain project building, software engineering, and
+            communication experience. Among that as well, there will be
+            employers from all over the United States at the Hackathon!
           </p>
         </section>
-        <section class="flex-section">
-          <div id="hobbies">
-            <h2>Skills:</h2>
-            <p>Languages: Java, C++, HTML, CSS</p>
-            <p>
-              Software Applications: Microsoft Suite, Google Suite, Git, SCRUM,
-              JUnit Testing, Design Patterns, SceneBuilder, JSON
-            </p>
-            <p>Operating Systems: Windows Professional Version, Linux/Unix</p>
-          </div>
-          <div id="hobbies">
-            <h2>Hobbies:</h2>
-            <p>
-              A few things I enjoy doing out of the classroom include running,
-              mountain biking, tennis, and hanging out with friends! I spent
-              eight years running competitively, two of which were as a
-              collegiete athlete, and now I'm currently marathon training!
-            </p>
-          </div>
-          <img src="images/banner.jpg" id="hobby-img" />
+        <section class="flex-post">
+          <h2>Capstone Project Update Coming Soon! - 01/20/2025</h2>
+          <p class="blog-text">
+            Capstone Project will be coming up soon and I'm excited to begin
+            working with a group on a real world project that will not only be a
+            portfolio piece but also be a great space to learn and push myself
+            to develop better software!
+            <img src="images/capstone.png" />
+          </p>
         </section>
       </div>
     </main>
     <footer id="main-footer">
       <p>Copyright &copy; 2023 Jackson Dawson</p>
     </footer>
-    <script src="aboutscript.js"></script>
+    <script src="blogscript.js"></script>
   </body>
 </html>
