--- a/csce242/projects/part4/projects.html
+++ b/csce242/projects/part4/projects.html
@@ -33,6 +33,9 @@
               href="https://jwdaw.github.io/csce242/projects/part4/contact.html"
               >Contact Me</a
             >
+            <a href="https://jwdaw.github.io/csce242/projects/part4/blog.html"
+              >Blog</a
+            >
           </li>
         </ul>
       </nav>
