added Part 4 to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -139,6 +139,23 @@
           </p>
         </section>
       </div>
+      <div class="flex-container">
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/projects/part4/index.html"
+              >Part 4 - Color, Text, and Images</a
+            >
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/projects/part4/index.html"
+            ><img src="images/ProjectPart4.png" alt="Project Part 4"
+          /></a>
+          <p>
+            Part four of my portfolio project updated all placeholders with
+            proper text, images, and edited some of the color scheme used in
+            part 3. Also added a blog page to meet project requirements.
+          </p>
+        </section>
+      </div>
     </main>
     <footer id="main-footer">
       <p><strong>&copy; Jackson Dawson 2025</strong></p>
