added sixth assignment

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -89,6 +89,21 @@
             image, recoloring a shape, etc.
           </p>
         </section>
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment06"
+              >Assignment 6 - JavaScript: Conditionals
+            </a>
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment06"
+            ><img src="images/assignment06.png" alt="Assignment 6"
+          /></a>
+          <p>
+            Sixth Assignment in which we created a simple website with some
+            JavaScript functionality to include if statements, switch
+            statements, and a few other javascript features.
+          </p>
+        </section>
       </div>
       <h2 id="assignment-header">Portfolio Project</h2>
       <div class="flex-container">
