--- a/csce242/assignments/assignment07/index.html
+++ b/csce242/assignments/assignment07/index.html
@@ -22,6 +22,7 @@
           <div id="stair-side" class="hidden"></div>
         </div>
       </section>
+      <button id="climb-stairs">Climb Stairs</button>
     </main>
     <!--Footer Section-->
     <footer id="main-footer">
