--- a/csce242/index.html
+++ b/csce242/index.html
@@ -105,6 +105,23 @@
           </p>
         </section>
       </div>
+      <div class="flex-container">
+        <section class="assignments">
+          <h3>
+            <a href="https://jwdaw.github.io/csce242/assignments/assignment07"
+              >Assignment 7 - JavaScript: Loops
+            </a>
+          </h3>
+          <a href="https://jwdaw.github.io/csce242/assignments/assignment07"
+            ><img src="images/Assignment07.png" alt="Assignment 7"
+          /></a>
+          <p>
+            Seventh assignment in which we created a small animation of a man
+            climbing some stairs. Both the stairs and man climbing the stairs
+            were created using loops.
+          </p>
+        </section>
+      </div>
       <h2 id="assignment-header">Portfolio Project</h2>
       <div class="flex-container">
         <section class="assignments">
