fixed assignment title

--- a/csce242/assignments/assignment07/index.html
+++ b/csce242/assignments/assignment07/index.html
@@ -2,15 +2,15 @@
 <html>
   <!--Head Holding Tab Name and Style Sheet Link-->
   <head>
-    <title>Assignment 05</title>
+    <title>Assignment 07</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <!--Body Containing Website Content-->
   <body>
     <!--Main Header Containing Title and Subtitle-->
     <header id="main-header">
-      <h1>Assignment 05</h1>
-      <h2>Introduction to JavaScript</h2>
+      <h1>Assignment 07</h1>
+      <h2>JavaScript Loops</h2>
     </header>
     <!--Main Content Section-->
     <main id="main-content">
